--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,31 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
+@media only screen and (max-width: 1026px) {
+  .discounts {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .discounts {
+    display: none;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .discounts {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .discounts {
+    display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .discounts {
+    display: none;
+  }
+}
